[gd_scene load_steps=63 format=3 uid="uid://wit0fthjhfxp"]

[ext_resource type="Texture2D" uid="uid://dr38tiv3rk4li" path="res://levels/zurgblast/zurg/zurg.png" id="1_a8pmx"]
[ext_resource type="Script" uid="uid://cokay3qud7gn1" path="res://levels/zurgblast/zurg/zurg.gd" id="1_dgcbe"]
[ext_resource type="PackedScene" uid="uid://6f6iid5hm5gx" path="res://levels/zurgblast/zurg/platform.blend" id="2_dgcbe"]
[ext_resource type="Script" uid="uid://b1dffa6ukg1i6" path="res://levels/zurgblast/zurg/projectile/zurg_launcher.gd" id="3_nd5n5"]
[ext_resource type="PackedScene" uid="uid://b18iljn106to4" path="res://levels/zurgblast/zurg/projectile/zurg_projectile.tscn" id="4_y3f7p"]
[ext_resource type="Script" uid="uid://neoh44hq0jbr" path="res://utility/DamageHandler.gd" id="5_e2acf"]
[ext_resource type="Shader" uid="uid://b4g23qb6ele23" path="res://shaders/flash_color_2d.tres" id="6_72txg"]
[ext_resource type="Script" uid="uid://c3yikdq00m2m1" path="res://utility/CharacterResource.gd" id="6_gnrcj"]
[ext_resource type="Script" uid="uid://bn3ny2jx53jdr" path="res://levels/zurgblast/zurg/states/zurg_state_machine.gd" id="8_erdk3"]
[ext_resource type="Script" uid="uid://caqqveycr25eg" path="res://levels/zurgblast/zurg/states/damaged.gd" id="9_4vqep"]
[ext_resource type="Script" uid="uid://0wb10fbxedyj" path="res://levels/zurgblast/zurg/states/wander.gd" id="9_erdk3"]
[ext_resource type="Script" uid="uid://bsg73rmysondp" path="res://levels/zurgblast/zurg/states/zurg_state_attack.gd" id="10_4vqep"]
[ext_resource type="Script" uid="uid://cq376p7fk3hvr" path="res://levels/zurgblast/zurg/states/zurg_state_volley.gd" id="11_v0u3p"]
[ext_resource type="AudioStream" uid="uid://bqkjutt5g7h47" path="res://levels/zurgblast/zurg/sounds/sfx_sound_shutdown1.wav" id="12_kn7a5"]
[ext_resource type="AudioStream" uid="uid://bf2x4q182s4eg" path="res://levels/zurgblast/zurg/sounds/sfx_sound_shutdown2.wav" id="13_u8p8w"]
[ext_resource type="Script" uid="uid://cf7hkigyfqad2" path="res://levels/zurgblast/zurg/mines.gd" id="14_h1o1f"]
[ext_resource type="AudioStream" uid="uid://dutuj5xddbrgi" path="res://levels/zurgblast/zurg/sounds/sfx_weapon_singleshot1.wav" id="14_hloqa"]
[ext_resource type="PackedScene" uid="uid://dlbyjymwfj72j" path="res://levels/zurgblast/mine/ZurgMine.tscn" id="15_eeqs6"]
[ext_resource type="AudioStream" uid="uid://b50sngy40h2wb" path="res://levels/zurgblast/zurg/sounds/sfx_wpn_cannon4.wav" id="17_8t8i0"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_all2i"]

[sub_resource type="Animation" id="Animation_erdk3"]
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_gnrcj"]
resource_name = "spin"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4vqep"]
_data = {
&"RESET": SubResource("Animation_erdk3"),
&"spin": SubResource("Animation_gnrcj")
}

[sub_resource type="Resource" id="Resource_v0u3p"]
script = ExtResource("6_gnrcj")
name = "HEALTH"
min_value = 0.0
max_value = 2.0
value = 2.0
metadata/_custom_type_script = "uid://c3yikdq00m2m1"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gnrcj"]
shader = ExtResource("6_72txg")
shader_parameter/mix_color = Color(1, 0, 0, 1)
shader_parameter/ossilation_factor = 0.0
shader_parameter/min_intensity = 0.0
shader_parameter/max_intensity = 0.8

[sub_resource type="AtlasTexture" id="AtlasTexture_a8pmx"]
atlas = ExtResource("1_a8pmx")
region = Rect2(0, 336, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgcbe"]
atlas = ExtResource("1_a8pmx")
region = Rect2(52, 336, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_76iun"]
atlas = ExtResource("1_a8pmx")
region = Rect2(0, 288, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_did74"]
atlas = ExtResource("1_a8pmx")
region = Rect2(52, 288, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gtss"]
atlas = ExtResource("1_a8pmx")
region = Rect2(104, 288, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_50rt7"]
atlas = ExtResource("1_a8pmx")
region = Rect2(0, 0, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjd61"]
atlas = ExtResource("1_a8pmx")
region = Rect2(52, 0, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwxr4"]
atlas = ExtResource("1_a8pmx")
region = Rect2(104, 0, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uvvb"]
atlas = ExtResource("1_a8pmx")
region = Rect2(156, 0, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwb7x"]
atlas = ExtResource("1_a8pmx")
region = Rect2(208, 0, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rg6kc"]
atlas = ExtResource("1_a8pmx")
region = Rect2(260, 0, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h78my"]
atlas = ExtResource("1_a8pmx")
region = Rect2(312, 0, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq2s8"]
atlas = ExtResource("1_a8pmx")
region = Rect2(364, 0, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvw7a"]
atlas = ExtResource("1_a8pmx")
region = Rect2(416, 0, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4k6f"]
atlas = ExtResource("1_a8pmx")
region = Rect2(0, 48, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5evo"]
atlas = ExtResource("1_a8pmx")
region = Rect2(52, 48, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vhdb"]
atlas = ExtResource("1_a8pmx")
region = Rect2(104, 48, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_snild"]
atlas = ExtResource("1_a8pmx")
region = Rect2(156, 48, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hb48"]
atlas = ExtResource("1_a8pmx")
region = Rect2(208, 48, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpq8m"]
atlas = ExtResource("1_a8pmx")
region = Rect2(260, 48, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oca5f"]
atlas = ExtResource("1_a8pmx")
region = Rect2(0, 144, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5ip4"]
atlas = ExtResource("1_a8pmx")
region = Rect2(52, 144, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvwt6"]
atlas = ExtResource("1_a8pmx")
region = Rect2(104, 144, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngdu0"]
atlas = ExtResource("1_a8pmx")
region = Rect2(0, 240, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwy5a"]
atlas = ExtResource("1_a8pmx")
region = Rect2(52, 240, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_21rqj"]
atlas = ExtResource("1_a8pmx")
region = Rect2(104, 240, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8atnq"]
atlas = ExtResource("1_a8pmx")
region = Rect2(0, 96, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5wo0"]
atlas = ExtResource("1_a8pmx")
region = Rect2(52, 96, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xecvh"]
atlas = ExtResource("1_a8pmx")
region = Rect2(104, 96, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ykdm"]
atlas = ExtResource("1_a8pmx")
region = Rect2(0, 192, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xd35i"]
atlas = ExtResource("1_a8pmx")
region = Rect2(52, 192, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrag1"]
atlas = ExtResource("1_a8pmx")
region = Rect2(104, 192, 52, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_775x5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8pmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgcbe")
}],
"loop": false,
"name": &"damage",
"speed": 1.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_76iun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_did74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gtss")
}],
"loop": false,
"name": &"defeat",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_50rt7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjd61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwxr4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uvvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwb7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rg6kc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h78my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq2s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvw7a")
}],
"loop": false,
"name": &"hand1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4k6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5evo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vhdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_snild")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hb48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpq8m")
}],
"loop": false,
"name": &"hand2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oca5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5ip4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvwt6")
}],
"loop": true,
"name": &"shoot_high",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngdu0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwy5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21rqj")
}],
"loop": true,
"name": &"shoot_low",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8atnq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5wo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xecvh")
}],
"loop": true,
"name": &"shoot_med",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ykdm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xd35i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrag1")
}],
"loop": false,
"name": &"standing",
"speed": 5.0
}]

[sub_resource type="ViewportTexture" id="ViewportTexture_e2acf"]
viewport_path = NodePath("SubViewport")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_qnj6g"]
streams_count = 2
stream_0/stream = ExtResource("12_kn7a5")
stream_1/stream = ExtResource("13_u8p8w")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8t8i0"]
streams_count = 1
stream_0/stream = ExtResource("14_hloqa")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_sgejs"]
streams_count = 1
stream_0/stream = ExtResource("17_8t8i0")

[node name="Zurg" type="CharacterBody3D" node_paths=PackedStringArray("sprite")]
collision_layer = 4
collision_mask = 11
script = ExtResource("1_dgcbe")
sprite = NodePath("SubViewport/AnimatedSprite2D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.50374, 0)
shape = SubResource("CapsuleShape3D_all2i")

[node name="platform" parent="." instance=ExtResource("2_dgcbe")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.254035, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="platform"]
libraries = {
&"": SubResource("AnimationLibrary_4vqep")
}
autoplay = "spin"

[node name="LaunchRays" type="Node3D" parent="." node_paths=PackedStringArray("sprite")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.505503, 0)
script = ExtResource("3_nd5n5")
projectile_scene = ExtResource("4_y3f7p")
sprite = NodePath("../SubViewport/AnimatedSprite2D")

[node name="high" type="Marker3D" parent="LaunchRays"]
transform = Transform3D(0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, -1.30985, 2.35666, 0)

[node name="low" type="Marker3D" parent="LaunchRays"]
transform = Transform3D(-0.394038, -0.919094, 0, 0.919094, -0.394038, 0, 0, 0, 1, -1.75006, 0.911493, 0)

[node name="med" type="Marker3D" parent="LaunchRays"]
transform = Transform3D(-0.00366512, -0.999993, 0, 0.999993, -0.00366512, 0, 0, 0, 1, -1.72096, 1.60749, 0)

[node name="DamageHandler" type="Node" parent="."]
script = ExtResource("5_e2acf")
health = SubResource("Resource_v0u3p")
metadata/_custom_type_script = "uid://neoh44hq0jbr"

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(52, 48)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="SubViewport"]
material = SubResource("ShaderMaterial_gnrcj")
position = Vector2(26, 24)
sprite_frames = SubResource("SpriteFrames_775x5")
animation = &"hand1"

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.395658, 1.70996, 0)
pixel_size = 0.05
shaded = true
alpha_cut = 2
texture_filter = 0
texture = SubResource("ViewportTexture_e2acf")

[node name="GenericStateMachine" type="Node" parent="." node_paths=PackedStringArray("zurg", "state")]
script = ExtResource("8_erdk3")
zurg = NodePath("..")
state = NodePath("wander")
metadata/_custom_type_script = "uid://dswy2oapviqwo"

[node name="wander" type="Node" parent="GenericStateMachine" node_paths=PackedStringArray("attack")]
script = ExtResource("9_erdk3")
attack = NodePath("../attack")
metadata/_custom_type_script = "uid://bfp5l4bk0qjv4"

[node name="PoseTimer" type="Timer" parent="GenericStateMachine/wander"]
wait_time = 1.654
autostart = true

[node name="AttackTimer" type="Timer" parent="GenericStateMachine/wander"]
wait_time = 3.103
one_shot = true

[node name="damaged" type="Node" parent="GenericStateMachine" node_paths=PackedStringArray("wander")]
script = ExtResource("9_4vqep")
wander = NodePath("../wander")
metadata/_custom_type_script = "uid://bfp5l4bk0qjv4"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GenericStateMachine/damaged"]
stream = SubResource("AudioStreamRandomizer_qnj6g")

[node name="attack" type="Node" parent="GenericStateMachine" node_paths=PackedStringArray("volley", "mines")]
script = ExtResource("10_4vqep")
volley = NodePath("volley")
mines = NodePath("mines")
metadata/_custom_type_script = "uid://bfp5l4bk0qjv4"

[node name="volley" type="Node" parent="GenericStateMachine/attack" node_paths=PackedStringArray("wander")]
script = ExtResource("11_v0u3p")
wander = NodePath("../../wander")
metadata/_custom_type_script = "uid://bfp5l4bk0qjv4"

[node name="Timer" type="Timer" parent="GenericStateMachine/attack/volley"]
wait_time = 0.3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GenericStateMachine/attack/volley"]
stream = SubResource("AudioStreamRandomizer_8t8i0")
bus = &"Effects"

[node name="mines" type="Node" parent="GenericStateMachine/attack" node_paths=PackedStringArray("wander")]
script = ExtResource("14_h1o1f")
wander = NodePath("../../wander")
mines_template = ExtResource("15_eeqs6")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GenericStateMachine/attack/mines"]
stream = SubResource("AudioStreamRandomizer_sgejs")
bus = &"Effects"

[node name="MineSpawnPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.233261, 0)
